Added comments and instructions

--- a/Scratch_Detection_CNN.ipynb
+++ b/Scratch_Detection_CNN.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1h-9ciWuoxsTRWsPrZb_QhvTlcJH1Yldv",
-      "authorship_tag": "ABX9TyNHXR32ScfztwyNXcMydhRP",
+      "authorship_tag": "ABX9TyNj16cSbeIojc9Ta0jg2PLR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,6 +37,18 @@
         "outputId": "2ddbb841-7658-4fd5-8ce7-0a857b90a9c3"
       },
       "source": [
+        "'''\n",
+        "MARTIN ZELIKOVSKY FEBRUARY 2021\n",
+        "\n",
+        "INSTRUCTIONS:\n",
+        "\n",
+        "Best to use in Google CoLab with GPU runtime. Upload zip folder (Scratch_Detection_CNN.zip) with \n",
+        "images, mount drive, and run each cell sequentially. Local copies of training \n",
+        "numpy arrays, model, and model output images will be saved, as well as runtime\n",
+        "copies. Notebook does not read from mounted drive to increase GPU speed. \n",
+        "\n",
+        "'''\n",
+        "\n",
         "# Get your Directory \n",
         "import os \n",
         "from zipfile import ZipFile\n",
@@ -47,7 +59,7 @@
         "  zip.extractall()\n",
         "  print('Done')\n",
         "\n",
-        "\n",
+        "# Various directories \n",
         "directory = os.getcwd()\n",
         "input_images = os.path.join(directory, 'Original Pictures')\n",
         "validation_images = os.path.join(directory, 'Validation Images')\n",
@@ -62,7 +74,7 @@
         "comparison_path = os.path.join(directory, 'Comparison')\n",
         "local_comparison_path = os.path.join(directory, 'drive/MyDrive/Comparison')\n",
         "\n",
-        "\n",
+        "# Directory creation\n",
         "if not os.path.exists(data_arrays):\n",
         "  os.mkdir(data_arrays)\n",
         "if not os.path.exists(local_data_arrays):\n",
@@ -98,8 +110,6 @@
         "import tensorflow\n",
         "from __future__ import print_function\n",
         "import  tensorflow.keras\n",
-        "from keras.datasets import cifar10\n",
-        "from keras.preprocessing.image import ImageDataGenerator\n",
         "from keras.models import Sequential\n",
         "from keras.layers import Dense, Dropout, Activation, Flatten\n",
         "from keras.layers import Conv2D, MaxPooling2D\n",
@@ -210,7 +220,6 @@
         "\n",
         "from __future__ import print_function\n",
         "import keras\n",
-        "from keras.datasets import cifar10\n",
         "from keras.preprocessing.image import ImageDataGenerator\n",
         "from keras.models import Sequential\n",
         "from keras.layers import Dense, Dropout, Activation, Flatten\n",
