Accounted for not being able to upload a zip folder > 25MB...

--- a/Scratch_Detection_CNN.ipynb
+++ b/Scratch_Detection_CNN.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1h-9ciWuoxsTRWsPrZb_QhvTlcJH1Yldv",
-      "authorship_tag": "ABX9TyNj16cSbeIojc9Ta0jg2PLR",
+      "authorship_tag": "ABX9TyOB+mTD7dI0bHO/WwlwIQGb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,22 +42,31 @@
         "\n",
         "INSTRUCTIONS:\n",
         "\n",
+        "** Uploading folders to Google CoLab runtime does not work; it is best to zip all the \n",
+        "image folders (\"Original Pictures\", \"Validation Images\", \"Unseen Test Images\") \n",
+        "and unzip them there. I would zip them myself but GitHub doesn't allow singular \n",
+        "file uploads larger than 25MB :( \n",
+        "\n",
+        "** PLEASE SET FLAG IF ZIPPED FOLDER IS UPLOADED**\n",
+        "\n",
+        "\n",
         "Best to use in Google CoLab with GPU runtime. Upload zip folder (Scratch_Detection_CNN.zip) with \n",
         "images, mount drive, and run each cell sequentially. Local copies of training \n",
         "numpy arrays, model, and model output images will be saved, as well as runtime\n",
         "copies. Notebook does not read from mounted drive to increase GPU speed. \n",
-        "\n",
         "'''\n",
-        "\n",
-        "# Get your Directory \n",
-        "import os \n",
+        "import os\n",
         "from zipfile import ZipFile\n",
         "\n",
-        "zipped = '/content/Scratch_Detection_CNN.zip'\n",
+        "# Have you zipped image folders before uploading? If so, set flag to True\n",
+        "zippy = True \n",
         "\n",
-        "with ZipFile(zipped, 'r') as zip:\n",
-        "  zip.extractall()\n",
-        "  print('Done')\n",
+        "if zippy:\n",
+        "  zipped = '/content/Scratch_Detection_CNN.zip'\n",
+        "  with ZipFile(zipped, 'r') as zip:\n",
+        "    zip.extractall()\n",
+        "    print('Done')\n",
+        "\n",
         "\n",
         "# Various directories \n",
         "directory = os.getcwd()\n",
